GNOME Bugzilla – Bug 693575
New typed initializer API is missing (transfer none) on return values
Last modified: 2013-02-11 20:01:14 UTC
Created attachment 235688 [details] [review] node: add (transfer none) annotations to the new typed initializers The typed initializers added in October are missing (transfer none) annotations.
Review of attachment 235688 [details] [review]: looks good
Attachment 235688 [details] pushed as eba4dfe - node: add (transfer none) annotations to the new typed initializers