node: add (transfer none) annotations to the new typed initializers

https://bugzilla.gnome.org/show_bug.cgi?id=693575